# django-analytics

./: .coveragerc  LICENSE.txt  PKG-INFO  README.rst  pyproject.toml  setup.py  tox.ini
django_analytics/: admin.py  apps.py  middleware.py  models.py  services.py  utils.py
tests/: conftest.py  models.py  test_django_analytics.py  urls.py  views.py
